fix: bg color on larger screens and max width feat: handle game over state/screen events fix: camera aspect ratio and re-enabling of capture on ios

--- a/roshambo-ui/src/IconRow.css
+++ b/roshambo-ui/src/IconRow.css
@@ -1,9 +1,15 @@
 
 .float {
   @apply p-2;
-  width: 20vw;
+  /* width: 20vw; */
   filter: invert(1);
 }
+
+/* @media only screen and (min-width: 600px)  {
+  .float {
+    width: 10vw;
+  }
+} */
 
 .float.animated {
   animation-name: float;
